@@ -55,7 +55,7 @@ import static io.kestra.core.utils.Rethrow.throwSupplier;
             code = """
                 id: python_flow
                 namespace: company.team
-                
+
                 tasks:
                   - id: python
                     type: io.kestra.core.tasks.scripts.Python
@@ -86,7 +86,7 @@ import static io.kestra.core.utils.Rethrow.throwSupplier;
             code = """
                 id: python_flow
                 namespace: company.team
-                
+
                 tasks:
                   - id: python
                     type: io.kestra.core.tasks.scripts.Python
@@ -203,8 +203,13 @@ public class Python extends AbstractBash implements RunnableTask<ScriptOutput> {
     public ScriptOutput run(RunContext runContext) throws Exception {
         Map<String, String> finalInputFiles = this.finalInputFiles(runContext);
 
-        if (!finalInputFiles.containsKey("main.py") && this.commands.size() == 1 && this.commands.get(0).equals("./bin/python main.py")) {
-            throw new Exception("Invalid input files structure, expecting inputFiles property to contain at least a main.py key with python code value.");
+        if (this.inputFiles == null ||
+            (this.inputFiles instanceof Map && !((Map<?, ?>) this.inputFiles).containsKey("main.py")) ||
+            (this.inputFiles instanceof String && !this.inputFiles.toString().contains("main.py"))) {
+
+            if (this.commands != null && this.commands.size() == 1 && this.commands.getFirst().equals("./bin/python main.py")) {
+                throw new Exception("Invalid input files structure, expecting inputFiles property to contain at least a main.py key with python code value.");
+            }
         }
 
         return run(runContext, throwSupplier(() -> {
